--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Hussein Jafferjee</title>
 
     <!-- font -->
-    <link href='http://fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Pinyon+Script' rel='stylesheet' type='text/css'>
 
     <!-- css -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
