upgrade font-awesome

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
             <div class="pull-right">
                 <ul class="social">
-                    <li class="facebook"><a href="https://www.facebook.com/jhussein" data-toggle="tooltip" style="cursor: pointer;" data-title="Facebook"><i class="icon-facebook"></i></a></li>
-                    <li class="googleplus"><a href="https://google.com/+HusseinJafferjee" data-toggle="tooltip" style="cursor: pointer;" data-title="Google+"><i class="icon-google-plus"></i></a></li>
-                    <li class="twitter"><a href="https://twitter.com/1nssein" data-toggle="tooltip"  style="cursor: pointer;" data-title="Twitter"><i class="icon-twitter"></i></a></li>
-                    <li class="linkedin"><a href="http://ca.linkedin.com/in/inssein" data-toggle="tooltip" style="cursor: pointer;" data-title="LinkedIn"><i class="icon-linkedin"></i></a></li>
+                    <li class="facebook"><a href="https://www.facebook.com/jhussein" data-toggle="tooltip" style="cursor: pointer;" data-title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                    <li class="googleplus"><a href="https://google.com/+HusseinJafferjee" data-toggle="tooltip" style="cursor: pointer;" data-title="Google+"><i class="fa fa--google-plus"></i></a></li>
+                    <li class="twitter"><a href="https://twitter.com/1nssein" data-toggle="tooltip"  style="cursor: pointer;" data-title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li class="linkedin"><a href="http://ca.linkedin.com/in/inssein" data-toggle="tooltip" style="cursor: pointer;" data-title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
