--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <footer>
         <div class="row">
             <div class="pull-left">
-                <i class="icon-envelope"></i> <a href="mailto:hussein@jafferjee.ca">hussein@jafferjee.ca</a>
+                <i class="fa fa-envelope"></i> <a href="mailto:hussein@jafferjee.ca">hussein@jafferjee.ca</a>
             </div>
 
             <div class="pull-right">
