change linked in url

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li class="facebook"><a href="https://www.facebook.com/jhussein" data-toggle="tooltip" data-title="Facebook"><i class="fa fa-facebook"></i></a></li>
                     <li class="googleplus"><a href="https://google.com/+HusseinJafferjee" data-toggle="tooltip" data-title="Google+"><i class="fa fa-google-plus"></i></a></li>
                     <li class="twitter"><a href="https://twitter.com/1nssein" data-toggle="tooltip" data-title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li class="linkedin"><a href="https://ca.linkedin.com/in/inssein" data-toggle="tooltip" data-title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="linkedin"><a href="https://ca.linkedin.com/in/hussein-jafferjee" data-toggle="tooltip" data-title="LinkedIn"><i class="fa fa-linkedin"></i></a></li>
                     <li class="github"><a href="https://github.com/inssein" data-toggle="tooltip" data-title="GitHub"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
